# AggressiveBot_refactored_validated

./: INTEGRATION_NOTES.txt  LEGACY_DEDUP_REPORT.txt  README.md  build_exe.ps1  predeploy.bat  predeploy.ps1  pyproject.toml  run.bat  run.ps1
.github/workflows/: ci.yml
aggbot/: __main__.py  logging.yaml  settings.py
aggbot/core/: broker.py  engine.py  integrations.py  strategy.py  strategy_base.py  validator.py
aggbot/legacy/Aggressive Bot/: .gitignore  App.css  config.json  config.sample.json  database.py  error_handler.py  error_patterns.json  index.html  main.py  master_validator.py  monitoring_dashboard.py  requirements.txt  risk_manager.py  run_bot.py  run_trading_bot.py  start_trading_bot.bat  strategies.py  strategy_optimizer.py  style.css  technical_analysis.py  terminal_monitor.py  test_bot_core.py  token_whitelist.json  trade_opportunity_analyzer.py  validate_strategies_aggressive.py  validate_strategies_production.py  validate_strategies_ultra_optimized.py  visualize_optimizer.py
aggbot/legacy_dedup/Aggressive Bot/: App.js  TradeHistory.js  advanced_alert_system.py  alert_dashboard.py  api_handler.py  config.py  diagnostic_error_handler.py  enhanced_logger.py  env.example  local_coin_db.json  main_bot.py  performance_monitor.py  run.py  strategy.py  token_addresses.json  token_denylist.json  trade_analyzer.py  trading_utils.py  train_model.py  validate_strategies.py  web_server.py
tests/: test_smoke.py  test_strategy_contract.py
tools/: dedupe_legacy.py
